--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@
 }
 .tt1 {
     font-family: 'elevate';
-    font-size: 3vw;
+    font-size: 4vw;
     text-align: center;
     text-shadow:0.1vw 0.1vw 0.1vw #0D0D0D;
     letter-spacing: 0.5vw;
@@ -223,17 +223,14 @@
     display: flex;
     width: 100%;
     height: 90vw;
-    padding:5vw 0;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background: url('images/bg2.png') no-repeat center center / cover;
 }
 .dv1{
     display: flex;
     width:100%;
-    height:100%;
-    padding: 0 0 5vw 0;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -290,6 +287,7 @@
     height:20vw;
     justify-content: center;
     align-items: center;
+    box-shadow: 0.1vw 0.1vw 0.5vw #F0F0F0;
     border-radius:2vw;
 }
 @media screen and (max-width:768px) {
@@ -370,6 +368,7 @@
     justify-content: space-evenly;
     align-items: center;
     background: rgba(13,13,13,0.95);
+    box-shadow: 0.1vw 0.1vw 0.5vw #F0F0F0;
     border-radius:2vw;
     z-index:1;
 }
@@ -429,6 +428,7 @@
 .im41 {
     width: 90vw;
     height: 30vw;
+    box-shadow: 0.1vw 0.1vw 0.5vw #F0F0F0;
     border-radius: 2vw;
     z-index: 1;
 }
@@ -533,7 +533,7 @@
 
 #sobre{
     display:flex;
-    height:150vw;
+    height:190vw;
     flex-direction: column;
     justify-content:flex-start;
     align-items:center;
@@ -555,42 +555,70 @@
     height:47.8vw;
     justify-content:center;
     align-items: center;
-    background-image: url(images/4.jpeg);
-    background-size: cover;
+    background: url(images/bg3.jpg) no-repeat center center / cover;
 }
 .sobrett1{
     font-family: 'elevate';
-    font-size: 6vw;
-    display:flex;
-    margin:0 0 5vw 0;
-    justify-content: center;
-    align-items: flex-start;
-    color:#F0F0F0;
-    z-index:2;
+    font-size: 4vw;
+    text-align: center;
+    text-shadow: 0.1vw 0.1vw 0.1vw #0D0D0D;
+    letter-spacing: 0.5vw;
+    color: #F0F0F0;
+    margin: 0 0 5vw 0;
+    z-index: 1;
 }
 .sobredv1{
     display: flex;
-    width: 80%;
+    width: 100%;
+    height: 75%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2vw 0 0 0;
+    background: url(images/bg2.png) no-repeat center center / cover;
+}
+
+.sobredv12{
+    display: flex;
+    width: 70%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+.sobretx{
+    font-family: 'bien';
+    font-size:1.5vw;
+    text-align: justify;
+    text-align-last: center;
+    color:#F0F0F0;
+    padding: 0 0 2vw 0;
+}
+.sobreim{
+    width:14vw;
+    height:14vw;
+    padding: 2vw 0;
 }
 .sobredv2{
     display: flex;
-    width: 80%;
+    width: 70%;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 2vw 0 0 0;
+    padding: 2vw 0;
+    background: #0D0D0D;
+    box-shadow: 0.1vw 0.1vw 0.5vw #F0F0F0;
+    border-radius: 2vw;
 }
 .sobredv3{
     display: flex;
-    width: 80%;
+    width: 70%;
     flex-direction: row-reverse;
     justify-content: space-around;
     align-items: center;
-    padding: 2vw 0 0 0;
+    padding: 2vw 0;
+    background: #0D0D0D;
+    box-shadow: 0.1vw 0.1vw 0.5vw #F0F0F0;
+    border-radius: 2vw;
 }
 .sobredv4{
     display: flex;
@@ -598,9 +626,6 @@
     align-items: center;
     width:50%;
     padding:2vw;
-    background: #0D0D0D;
-    box-shadow: 0.1vw 0.1vw 0.5vw #F0F0F0;
-    border-radius: 2vw;
 }
 .sobretx1{
     font-family: 'bien';
@@ -608,11 +633,10 @@
     text-align: justify;
     color:#F0F0F0;
 }
-.sobreim{
+.sobreim1{
     width:14vw;
     height:14vw;
     border-radius:1vw;
-    box-shadow: 0.1vw 0.1vw 0.5vw #F0F0F0;
 }
 
 #doar{
@@ -620,8 +644,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height:45.8vw;
-    background: #0D0D0D;
+    height:50vw;
+    background: url(images/bg2.png) no-repeat center center / cover;
 }
 .doartt1{
     font-family: 'elevate';
@@ -640,18 +664,27 @@
 .doardv2{
     display:flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     height:15vw;
+}
+.doardv2 ul{
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    padding:2vw 0;
 }
 .doartt2{
     font-family: 'elevate';
     font-size:2vw;
+    text-align:center;
     color:#F0F0F0;
 }
 .doartx1{
     font-family: 'bien';
     font-size:1.25vw;
+    text-align:center;
     color:#F0F0F0;
 }
 .doarim{
@@ -660,6 +693,7 @@
     height:10vw;
     justify-content: center;
     align-items: center;
+    border-radius:1vw
 }
 
 [data-aos][data-aos][data-aos-duration="50"],
@@ -1938,7 +1972,7 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 }
 
 .slick-loading .slick-list {
-    background: url('./ajax-loader.gif') center center no-repeat #fff
+    background: url('./ajax-loader.gif') no-repeat center center #fff;
 }
 
 .slick-dots li button,
