--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@
 #inspiracao {
     display: flex;
     width: 100%;
-    height: 90vw;
+    height: 100vw;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -434,7 +434,7 @@
     width: 50vw;
     height: auto;
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -480,7 +480,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: rgba(13,13,13,0.95);
+}
+.subtitulo{
+    margin:5vw 0 0 0;
+    color:#FFFFFF
 }
 .slideres {
     position: relative;
@@ -500,7 +503,6 @@
     position: absolute;
     width: 3vw;
     height: 20vw;
-    background: linear-gradient(to right, rgba(13,13,13, 1) 0%, rgba(13,13,13,0) 100%);
     z-index: 2;
 }
 
