--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,9 +198,9 @@
 
 .ls_ls_li:hover {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
 	animation: slideDown 1s ease-in-out;
 }
 
@@ -691,7 +691,20 @@
 	justify-content: center;
 	align-items: center;
 	height: 60vw;
-	background: #0D0D0D;
+	background-image: url(../images/doar9.webp);
+	background-size: cover;
+}
+
+#da_sc::before {
+	content: "";
+	/* Necessário para criar o pseudoelemento */
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 60vw;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 0;
 }
 
 .da_tt {
@@ -716,10 +729,11 @@
 	/* 2 colunas com o mesmo tamanho */
 	gap: 2vw;
 	/* Espaçamento entre as fotos */
-	width: 80%;
-	height: 100%;
+	width: 100%;
+	height: 20vw;
+	padding: 2vw;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
 }
 
@@ -735,7 +749,7 @@
 
 .da_td_dv {
 	display: flex;
-	width: 80%;
+	width: 100%;
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
@@ -765,10 +779,11 @@
 	/* 2 colunas com o mesmo tamanho */
 	gap: 2vw;
 	/* Espaçamento entre as fotos */
-	width: 80%;
-	height: 100%;
+	width: 100%;
+	height: 20vw;
+	padding: 2vw;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
 }
 
@@ -862,12 +877,6 @@
 	animation-delay: 0.8s;
 }
 
-.separator {
-	width: 5vw;
-	padding: 1vw 0;
-	border-top: 1px solid #F0F0F0;
-}
-
 .whats {
 	position: fixed;
 	display: flex;
@@ -879,6 +888,12 @@
 	cursor: pointer;
 	animation: shake 4s ease-in-out infinite;
 	z-index: 100;
+}
+
+.separator {
+	width: 5vw;
+	padding: 1vw 0;
+	border-top: 1px solid #F0F0F0;
 }
 
 @media screen and (max-width:768px) {
@@ -919,6 +934,9 @@
 		height: 220vw;
 		top: 14vw;
 		right: 0;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
 		background: rgba(13, 13, 13, 0.95);
 	}
 
@@ -927,10 +945,20 @@
 		border-bottom: 0.1vw solid #F0F0F0;
 	}
 
+	.ls_nv {
+		font-size: 4vw;
+		width: 100%;
+		padding: 5vw 5vw;
+		flex-direction: row-reverse;
+		justify-content: flex-end;
+		align-items: center;
+	}
+
 	.ls_la {
 		font-size: 4vw;
 		text-decoration: none;
 		width: 100%;
+		left: 5vw;
 		padding: 5vw 0;
 		flex-direction: row-reverse;
 		justify-content: flex-end;
@@ -938,9 +966,8 @@
 	}
 
 	.ls_ls {
-		position: absolute;
 		display: flex;
-		width: 20vw;
+		width: 100%;
 		top: 15vw;
 		left: 0;
 		flex-direction: column;
@@ -951,31 +978,16 @@
 		border-radius: 0;
 	}
 
-	.ls_la_li {
-		display: none;
-		position: relative;
-		padding: 0.5vw;
-	}
-
-	.ls_la_li:hover {
+	.ls_la:hover .ls_ls_li {
 		display: flex;
-		width: 5vw;
-		flex-direction: column;
 		justify-content: center;
 		align-items: center;
 		animation: slideDown 1s ease-in-out;
 	}
 
-	.ls_nv {
-		font-size: 4vw;
-		text-decoration: none;
-		color: #F0F0F0;
-		display: flex;
-		width: 100%;
-		flex-direction: row-reverse;
-		justify-content: flex-end;
-		align-items: center;
-		padding: 5vw 0;
+	.ls_la:hover .ls_ls {
+		justify-content: space-around;
+		align-items: flex-start;
 	}
 
 	.ls_im {
@@ -984,24 +996,16 @@
 	}
 
 	#ft {
-		position: absolute;
-		display: flex;
-		width: 100%;
 		height: 15vw;
-		bottom: revert;
-		justify-content: center;
-		align-items: center;
-		background: rgba(13, 13, 13, 1);
 	}
 
 	.fttx {
 		font-size: 5vw;
 		text-align: center;
-		color: #F0F0F0;
 	}
 
 	#he_sc {
-		height: 220vw;
+		height: 217vw;
 	}
 
 	.he_vd {
@@ -1053,7 +1057,7 @@
 		justify-content: space-evenly;
 	}
 
-	.ct_dv {
+	.ct_ft_dv {
 		width: 90%;
 		height: 100vw;
 		margin: 5vw;
@@ -1176,6 +1180,10 @@
 
 	.da_ff_dv {
 		display: none;
+	}
+
+	.loading_wd {
+		font-size: 10vw;
 	}
 
 	.dots {
