--- a/pages/EN/components/header.html
+++ b/pages/EN/components/header.html
@@ -3,7 +3,7 @@
 <!--|Import|-->
 
 <header id="hd">
-	<div id="lg_dv"><a href="en.html"><img class="lg" src="../../assets/images/logo.webp"></a></div>
+	<div id="lg_dv"><a href="en.html"><img class="lg" src="../../assets/images/logo/logo.webp"></a></div>
 	<ul id="ls">
 		<li><a class="ls_nv" href="en.html"><img class="ls_im" src="../../assets/images/botoes/home.svg">HOME</a></li>
 		<li><a class="ls_nv" href="about.html"><img class="ls_im" src="../../assets/images/botoes/sobre.svg">ABOUT US</a></li>
