--- a/pages/ES/components/header.html
+++ b/pages/ES/components/header.html
@@ -3,7 +3,7 @@
 <!--|Import|-->
 
 <header id="hd">
-	<div id="lg_dv"><a href="es.html"><img class="lg" src="../../assets/images/logo.webp"></a></div>
+	<div id="lg_dv"><a href="es.html"><img class="lg" src="../../assets/images/logo/logo.webp"></a></div>
 	<ul id="ls">
 		<li><a class="ls_nv" href="es.html"><img class="ls_im" src="../../assets/images/botoes/home.svg">HOME</a></li>
 		<li><a class="ls_nv" href="sobre.html"><img class="ls_im" src="../../assets/images/botoes/sobre.svg">SOBRE</a></li>
