--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,7 @@
 <!--|Import|-->
 
 <header id="hd">
-	<div id="lg_dv"><a href="/"><img class="lg" src="/assets/images/logo.webp"></a></div>
+	<div id="lg_dv"><a href="/"><img class="lg" src="/assets/images/logo/logo.webp"></a></div>
 	<ul id="ls">
 		<li><a class="ls_nv" href="/"><img class="ls_im" src="/assets/images/botoes/home.svg">HOME</a></li>
 		<li><a class="ls_nv" href="/pages/sobre.html"><img class="ls_im" src="/assets/images/botoes/sobre.svg">SOBRE NÓS</a></li>
