--- a/pages/ES/components/header.html
+++ b/pages/ES/components/header.html
@@ -3,31 +3,31 @@
 <!--|Import|-->
 
 <header id="hd">
-	<div id="lg_dv"><a href="es.html"><img class="lg" src="../../assets/images/logo/logo.webp"></a></div>
+	<div id="lg_dv"><a href="es"><img class="lg" src="../../assets/images/logo/logo.webp"></a></div>
 	<ul id="ls">
-		<li><a class="ls_nv" href="es.html"><img class="ls_im" src="../../assets/images/botoes/home.svg">HOME</a></li>
-		<li><a class="ls_nv" href="sobre.html"><img class="ls_im" src="../../assets/images/botoes/sobre.svg">SOBRE</a></li>
-		<li><a class="ls_nv" href="contacto.html"><img class="ls_im" src="../../assets/images/botoes/contato.svg">CONTACTO</a></li>
-		<li><a class="ls_nv" href="donacion.html"><img class="ls_im" src="../../assets/images/botoes/doar.svg">DONAR AHORA</a></li>
+		<li><a class="ls_nv" href="es"><img class="ls_im" src="../../assets/images/botoes/home.svg">HOME</a></li>
+		<li><a class="ls_nv" href="sobre"><img class="ls_im" src="../../assets/images/botoes/sobre.svg">SOBRE</a></li>
+		<li><a class="ls_nv" href="contacto"><img class="ls_im" src="../../assets/images/botoes/contato.svg">CONTACTO</a></li>
+		<li><a class="ls_nv" href="donacion"><img class="ls_im" src="../../assets/images/botoes/doar.svg">DONAR AHORA</a></li>
 		<li class="ls_la"><img class="ls_im" src="../../assets/images/botoes/language.svg">IDIOMA
 			<ul class="ls_ls">
 				<li><a class="ls_nv" href="/"><img class="ls_im" src="../../assets/images/botoes/br.svg">PT/BR</a></li>
-				<li><a class="ls_nv" href="../EN/en.html"><img class="ls_im" src="../../assets/images/botoes/en.svg">EN</a></li>
-				<li><a class="ls_nv" href="es.html"><img class="ls_im" src="../../assets/images/botoes/es.svg">ES</a></li>
+				<li><a class="ls_nv" href="../EN/en"><img class="ls_im" src="../../assets/images/botoes/en.svg">EN</a></li>
+				<li><a class="ls_nv" href="es"><img class="ls_im" src="../../assets/images/botoes/es.svg">ES</a></li>
 			</ul>
 		</li>
 	</ul>
 	<div id="mn_dv" onclick="toggleMenu()"><img src="../../assets/images/botoes/menu.svg" id="mn"></div>
 	<ul id="lsm">
-		<li class="ls_li"><a class="ls_nv" href="es.html">HOME<img class="ls_im" src="../../assets/images/botoes/home.svg"></a></li>
-		<li class="ls_li"><a class="ls_nv" href="sobre.html">SOBRE<img class="ls_im" src="../../assets/images/botoes/sobre.svg"></a></li>
-		<li class="ls_li"><a class="ls_nv" href="contacto.html">CONTACTO<img class="ls_im" src="../../assets/images/botoes/contato.svg"></a></li>
-		<li class="ls_li"><a class="ls_nv" href="donacion.html">DONAR AHORA<img class="ls_im" src="../../assets/images/botoes/doar.svg"></a></li>
+		<li class="ls_li"><a class="ls_nv" href="es">HOME<img class="ls_im" src="../../assets/images/botoes/home.svg"></a></li>
+		<li class="ls_li"><a class="ls_nv" href="sobre">SOBRE<img class="ls_im" src="../../assets/images/botoes/sobre.svg"></a></li>
+		<li class="ls_li"><a class="ls_nv" href="contacto">CONTACTO<img class="ls_im" src="../../assets/images/botoes/contato.svg"></a></li>
+		<li class="ls_li"><a class="ls_nv" href="donacion">DONAR AHORA<img class="ls_im" src="../../assets/images/botoes/doar.svg"></a></li>
 		<li class="ls_la">IDIOMA<img class="ls_im" src="../../assets/images/botoes/language.svg">
 			<ul class="ls_ls">
 				<li class="ls_ls_li"><a class="ls_nv" href="/">PT/BR<img class="ls_im" src="../../assets/images/botoes/br.svg"></a></li>
-				<li class="ls_ls_li"><a class="ls_nv" href="../EN/en.html">EN<img class="ls_im" src="../../assets/images/botoes/en.svg"></a></li>
-				<li class="ls_ls_li"><a class="ls_nv" href="es.html">ES<img class="ls_im" src="../../assets/images/botoes/es.svg"></a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="../EN/en">EN<img class="ls_im" src="../../assets/images/botoes/en.svg"></a></li>
+				<li class="ls_ls_li"><a class="ls_nv" href="es">ES<img class="ls_im" src="../../assets/images/botoes/es.svg"></a></li>
 			</ul>
 		</li>
 	</ul>
