--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1121,7 +1121,8 @@
     position: absolute;
     display: flex;
     width: 100%;
-    height: 5vw;
+    height: 10vw;
+    padding: 1vw 0;
     bottom: revert;
     flex-direction: column;
     justify-content: center;
